--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ html{
 	font-family: Roboto;
 	background-color: #36393E;
 }
+#html{
+	transition: all 0.5s ease-in-out;
+	opacity: 0.0;
+}
 .row{
 	display:flex;
 	flex-direction: row !important;
@@ -25,11 +29,33 @@ html{
 	filter: saturate(0);
 	background-color: white;
 }
-input[type=text]{
+input[type=text],select,input[type=number] {
 	width: 100px;
 	border: none;
 	box-shadow: 0 2.5px 5px rgba(154,160,185,.3);
+	background-color:#fff;
+	transition: all 0.5s ease-in-out;
+}
+input:not(:placeholder-shown){
 	background-color:#fff1ed;
+	box-shadow: none;
+}
+input[type=number]{
+	-moz-appearance: textfield;
+}
+select{
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	background: url(http://www.stackoverflow.com/favicon.ico) 95% / 20% no-repeat #fff;
+  	background-color:#fff1ed;
+	box-shadow: none;
+}
+select:hover{
+	background-color:#ccc;
+}
+.sml{
+	font-size: 7.5px;
 }
 .small{
 	font-size: 5px;
@@ -42,14 +68,15 @@ input[type=text]{
 }
 #front{
 	border-radius:15px;
+	border: 5px #fff solid;
 	margin: 5px;
 	width: 390px;
 	height: 230px;
 	background-color:#fff1ed;
 	opacity: 0;
-	transition: all 0.5s ease-in-out;
+	transition: all 0.75s ease-in-out;
 	align-items: center;
-	overflow:hidden;
+	overflow:hidden !important;
 }
 #back{
 	border-radius:15px;
@@ -58,15 +85,18 @@ input[type=text]{
 	height: 230px;
 	background-color:#fff1ed;
 	opacity: 0;
-	transition: all 0.5s ease-in-out;
+	transition: all 0.75s ease-in-out;
 	align-items: center;
-	overflow:hidden;
+	overflow:hidden !important;
 }
 #front:hover, #back:hover{
 	transform: scale(1.5);
 }
 .marg{
 	margin: 5px;
+}
+.big_marg{
+	margin: 55px;
 }
 #sex{
 	width: 30px !important;
@@ -87,6 +117,17 @@ input[type=text]{
 input[type=text]:-moz-input-placeholder{
 	font-size: 4px;
 }
+.output{
+	border-radius:7px;
+	border: 5px white solid;
+	margin: 5px;
+	padding:5px;
+	width: 300px;
+	background-color:#fff1ed;
+	align-items: center;
+	text-align: center;
+}
+
 #id_card{
 	justify-content: center
 }
@@ -116,6 +157,15 @@ input[type=text]:-moz-input-placeholder{
 	width: auto;
 	margin-left: 10px;
 	filter: saturate(0);
+	
+}
+.nice{
+	background-color: #98f5c5;
+	border-radius:2px;
+	margin: 5px;
+	padding:5px;
+	width: auto;
+	align-items: center;
 }
 p{
 	height:4px;
@@ -161,18 +211,32 @@ p{
 	justify-content:center;
 	align-items: center;
 }
+.field3{
+	display:flex;
+	justify-content:center;
+	align-items: center;
+	margin:50px;
+	border: 5px white solid;
+	padding: 50px;
+	background-color: #E59400;
+	border-radius: 50ch;
+}
 button{
+	margin: 10px;
 	width: 100px;
 	border:none;
 	border-radius: 25px;
-	height:20px;
+	height:auto;
+	padding: 1ch;
 	box-shadow: 0 2.5px 10px rgba(154,160,185,0.5);
 	transition: all 250ms ease-in-out;
 }
 button:hover{
 	background-color: #98f5c5;
-	color: #fff;
 	box-shadow: 0 5px 5px rgba(154,160,185,1);
+}
+#delete:hover{
+	background-color:#F00;
 }
 .botto{
 	align-items: flex-end;
@@ -187,4 +251,41 @@ button:hover{
 }
 .snail{
 	width: 70px !important;
+}
+#crab{
+	display: flex;
+	width:100%;
+	margin: 25px;
+	border: 5px white solid;
+	margin: 5px;
+	padding:5px;
+	font-size: 7px;
+	color: #000;
+	background-color:#36393E;
+	flex-direction: column;
+	margin: 5px;
+	transition: all 250ms ease-in-out;
+}
+.snake{
+	width: 100%;
+	border-radius:7px;
+	margin: 1.5px;
+	padding:7px;
+	background-color:#eee;
+	color: #000;
+	align-content: break-word;
+	height: auto;
+	transition: all 250ms ease-in-out;
+}
+.snake:hover{
+	transform: scale(1.5);
+}
+#info p{
+	border-radius: 0px;
+	border:none;
+	margin:0px;
+	background-color: #36393E;
+	color: #fff;
+	font-size:8px;
+	text-align: center;
 }
